--- a/ateamapi-development.properties
+++ b/ateamapi-development.properties
@@ -1,3 +1,5 @@
+server.port=9090
+
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/aTeamapi?useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username = root
