--- a/ateamapi-development.properties
+++ b/ateamapi-development.properties
@@ -1,3 +1,4 @@
+spring.application.name=ateamapi
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/aTeamapi?useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username = root
