--- a/ateamapi-development.properties
+++ b/ateamapi-development.properties
@@ -12,3 +12,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+ateamapi.temp.path=${~/tmp/fanta-tmp}
