--- a/ateamapi-development.properties
+++ b/ateamapi-development.properties
@@ -13,4 +13,4 @@ spring.jpa.properties.hibernate.current_session_context_class=org.springframewor
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-ateamapi.temp.path=${~/tmp/fanta-tmp}
+ateamapi_temp_path=${~/tmp/fanta-tmp}
