--- a/ateamapi-development.properties
+++ b/ateamapi-development.properties
@@ -2,7 +2,7 @@ spring.application.name=ateamapi
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/aTeamapi?useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = rootadmin
 
 
 ## Hibernate Properties
